Process Hacker

2.35
 * NEW/IMPROVED:
   * Support for up to 64 processors when setting process/thread affinity
   * Updated ExtendedTools plugin:
     * Added Disk and Network graphs for all processes
 * FIXED:

2.34
 * NEW/IMPROVED:
   * Proper Unicode support
   * CPU and GPU graphs are displayed in a grid now (thanks pavel_kv!)
   * Start Task Manager now elevates when necessary
   * Better names for memory regions in Memory tab (for PEBs, TEBs, thread stacks)
   * Added tooltip information for user-mode driver framework (UMDF) host processes
   * Added option to reduce row height (set ThinRows to 1 in settings.xml)
   * Added NetAdapters plugin: adds graphs for selected network adapters to the System Information window
   * Updated ExtendedTools plugin:
     * Added GPU graphs for all processes
     * Can now use the search box in the Disk tab
     * Improved kernel logger handling
 * FIXED:
   * Fixed touch scrolling
   * Fixed EtwRegistration object names for 64-bit Windows 8.1
   * Fixed tray icons being clipped in high DPI environments
   * Fixed crash in memory editor
   * Fixed multi monitor window placement bug

2.33
 * NEW/IMPROVED:
   * View digital signature information from process properties and peview
   * Signatures for Windows 8 apps are now detected
   * Improved file, key, process and thread handle properties
   * Added DPI Awareness column
   * Added new Windows 8.1 process protection information
   * KProcessHacker is no longer needed for highlighting of GUI threads
   * Added suspend count for threads on Windows 8.1
   * Updated DotNetTools plugin:
     * Improved .NET assembly enumeration timeout handling
 * FIXED:
   * Service start type and error control are never updated if modified outside of Process Hacker

2.32
 * NOTE:
   * All executable files are now signed.
 * NEW/IMPROVED:
   * Updated for Windows 8.1
   * Added progress display for thread stacks
   * Updated ExtendedServices plugin:
     * Added new trigger data types